--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>密码生成器 | Password Forge</title>
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="app-header">
     <div>
-      <h1 data-i18n="title">密码生成器</h1>
+      <h1 data-i18n="title">
+        密码生成器
+        <img src="favicon.svg" alt="Logo" class="logo-icon" aria-hidden="true">
+      </h1>
       <p data-i18n="subtitle">快速生成安全、可定制的随机密码</p>
     </div>
-    <div class="language-toggle">
-      <label for="languageSelect" data-i18n="language">语言</label>
-      <select id="languageSelect">
-        <option value="zh">中文</option>
-        <option value="en">English</option>
-      </select>
+    <div class="language-toggle" role="group" aria-label="Language toggle">
+      <button id="langZhBtn" type="button" class="lang-btn" data-lang="zh" aria-pressed="true">中文</button>
+      <button id="langEnBtn" type="button" class="lang-btn" data-lang="en" aria-pressed="false">English</button>
     </div>
   </header>
 
